<resources>
    <string name="app_name">Foodify</string>
    <string name="activity_home">Trang chủ</string>
    <string name="activity_search">Tìm kiếm</string>
    <string name="activity_basket">Giỏ hàng</string>
    <string name="activity_favorite">Yêu thích</string>
    <string name="activity_profile">Thông tin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_text">Đăng ký</string>
    <string name="already_have_account">Bạn đã có tài khoản?</string>
    <string name="sign_in_text">Đăng nhập</string>
    <string name="password_text">Mật khẩu</string>
    <string name="email_text">EMAIL</string>
    <string name="phone_text">số điện thoại</string>
    <string name="repeat_password_text">xác nhận mật khẩu</string>
    <string name="first_name_text">Họ</string>
    <string name="last_name_text">Tên</string>
    <string name="birthday_text">ngày tháng năm sinh</string>
    <string name="address_text">địa chỉ</string>
    <string name="phone_or_email">số điện thoại hoặc email</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="dont_have_an_account">Bạn chưa có tài khoản?</string>
    <string name="forgot_password_description">Chúng tôi sẽ gửi mã xác nhận qua email của bạn.</string>
    <string name="confirm_code">mã xác nhận</string>
    <string name="confirm_code_description">Chúng tôi đã gửi tin mã xác nhận qua số điện thoại của bạn.</string>
    <string name="did_not_receive_code">Chưa nhận được mã?</string>
    <string name="resend_code">Gửi lại</string>
    <string name="confirm">Xác nhận</string>
    <string name="new_password">mật khẩu mới</string>
    <string name="hello_guest">Hello, Guest!</string>
    <string name="recommend_for_you">Recommend for you</string>
    <string name="restaurant">Restaurant</string>
    <string name="the_most_popular_food">The most popular food</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="home">Home</string>
    <string name="location_icon">Location Icon</string>
    <string name="food_title">Food Title</string>
    <string name="basket_icon">Basket Icon</string>
    <string name="favourite_icon">Favourite Icon</string>
    <string name="text_description">Non odit iusto delectus maxime sit placeat voluptatum dolorem. Dolores quos rerum iusto.
        Beatae totam ab veritatis aliquid tenetur qui ut. Quia ut dolorum enim et. .</string>
    <string name="username">Tên người dùng</string>
    <string name="updated">Cập nhật</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="account_and_profile">Thông tin tài khoản</string>
    <string name="delete">Delete</string>
    <string name="full_name">Họ và tên</string>
    <string name="basket">basket</string>
    <string name="food_name">Food Name</string>
</resources>