<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activity_home"
        android:icon="@drawable/ic_home"
        android:title="@string/activity_home"
        />

    <item
        android:id="@+id/activity_search"
        android:icon="@drawable/ic_search"
        android:title="@string/activity_search"
        />

    <item
        android:id="@+id/activity_basket"
        android:icon="@drawable/ic_basket"
        android:title="@string/activity_basket"
        />

    <item
        android:id="@+id/activity_favorite"
        android:icon="@drawable/ic_favourite"
        android:title="@string/activity_favorite"
        />

    <item
        android:id="@+id/activity_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/activity_profile"
        />
</menu>